# brain-md-cli

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEMO_REPORT.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  pytest.ini
.github/workflows/: build-docs.yml  deploy-docs.yml  docs.yml  tests.yml
brain_md/: __init__.py  boot.py  cli.py  compiler.py  models.py  parser.py  pointer.py  tokens.py  watcher.py
docs/: commands.html  conf.py  genindex.html  py-modindex.html  quickstart.html  toon_format.rst
docs/_sources/: index.rst.txt
examples/: agents.md  brain.md  context.md  schema.sql
examples/aerospace_flight_dynamics/: brain.md  context.md  protocol_abort.txt  protocol_launch.txt
examples/autonomous_vehicle_fusion/: brain.md  calibration_extrinsics.yaml  context.md  fusion_kernel.cu  iso26262_safety_goals.req  phase1.toon  phase2.toon
examples/avionics_certification/: analysis.txt  brain.md  context.md  derivation_rules.txt  flight_control.c  payload_phase1.toon  payload_phase2.toon  safety_requirements.req  traceability_matrix.csv
examples/avionics_flight_control/: DO178C_checklist.txt  analysis.md  brain.md  context.md  flight_control_spec.req  pid_controller.c
examples/banking_core_migration/: audit_schema.json  brain.md  context.md  (+5 more)
spec/: DRIVER_PROMPT.md  TOON_SPEC_v1.0.md
templates/: starter-dev.md  starter-pm.md  starter-writer.md
tests/: test_boot_command.py  test_comment_stripping.py  test_heredoc_support.py  test_mode_prompts.py  test_parser_integration.py  test_section_validation.py  test_token_budget.py  test_watch_mode.py
(+201 files in other folders)
